--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
         "WhatsApp Multi Device bot"
     ],
     "repository": "https://github.com/Prince-Mendiratta/BotsApp",
-    "website": "https://mybotsapp.com",
+    "website": "https://developerpritam.in",
     "success_url": "",
     "stack": "container",
     "env": {
@@ -38,12 +38,12 @@
         },
         "OCR_API_KEY": {
             "description": "API key for using OCR (Optical Character Recognition) module. You can obtain this for free from https://ocr.space/",
-            "value": "78OSNhWA4vnK06Gq6BzI",
+            "value": "",
             "required": false
         },
         "WEATHER_API_KEY": {
             "description": "API key for using weather module. You can obtain this for free from https://openweathermap.org/",
-            "value": "5df24ff621b46f873d0266f12e0ae7ca",
+            "value": "",
             "required": false
         },
         "DEBUG": {
@@ -58,7 +58,7 @@
         },
         "SUDO": {
             "description": "List down the phone numbers in international format, separated by commas, who should have permission to use the bot. For example -> 917838xxxxxx,1875xxxxxxxx",
-            "value": "917011411568",
+            "value": "917011687668",
             "required": false
         }
     },
